--- a/dagster_university/.env
+++ b/dagster_university/.env
@@ -2,7 +2,7 @@ DUCKDB_DATABASE=data/staging/data.duckdb
 DAGSTER_HOME=${PWD}
 # DAGSTER_HOME=/Users/yo_macbook/Documents/dev/data-orchestration-dagster/dagster_university
 
+#### if when using $DAGSTER_HOME does not work, then manually run `export DAGSTER_HOME=$(pwd)` in terminal
 
 
-
-DAGSTER_SQLITE_STORAGE=/Users/yo_macbook/Documents/dev/data-orchestration-dagster/dagster_university/dagster_university/storage
+# DAGSTER_SQLITE_STORAGE_BASE_DIR=/Users/yo_macbook/Documents/dev/data-orchestration-dagster/dagster_university
